// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopover children is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="1"
>
  <button />
</div>
`;

exports[`EuiPopover is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorDownCenter testClass1 testClass2"
  data-test-subj="test subject string"
  id="0"
>
  <button />
</div>
`;

exports[`EuiPopover props anchorPosition defaults to centerDown 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="4"
>
  <button />
</div>
`;

exports[`EuiPopover props anchorPosition downRight is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownRight"
  id="6"
>
  <button />
</div>
`;

exports[`EuiPopover props anchorPosition leftCenter is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorLeftCenter"
  id="5"
>
  <button />
</div>
`;

exports[`EuiPopover props isOpen defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="7"
>
  <button />
</div>
`;

exports[`EuiPopover props isOpen renders true 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="8"
>
  <button />
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel"
    />
  </div>
</div>
`;

exports[`EuiPopover props ownFocus defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="9"
>
  <button />
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel"
    />
  </div>
</div>
`;

exports[`EuiPopover props ownFocus renders true 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="10"
>
  <button />
  <div>
    <div
      aria-live="off"
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelClassName is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="11"
>
  <button />
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel test"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelPaddingSize is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="12"
>
  <button />
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPanel--paddingSmall euiPanel--shadow euiPopover__panel"
    />
  </div>
</div>
`;

exports[`EuiPopover props withTitle is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--withTitle"
  id="2"
>
  <button />
</div>
`;
